[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
xdg = "2.5.2"
